[26.02.04] 리플렉션으로 컨트롤러 및 파라미터 코드 분석하여 html에 API 표시되도록 수정 및 메세지 폭주하는 버그 수정

--- a/sse-console-spring-boot-starter/sse-console-spring-boot-starter/pom.xml
+++ b/sse-console-spring-boot-starter/sse-console-spring-boot-starter/pom.xml
@@ -4,13 +4,27 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.5</version>
+        <relativePath/>
+    </parent>
+
     <groupId>io.github.leewoo97</groupId>
     <artifactId>sse-console-spring-boot-starter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <java.version>17</java.version>
+        <maven.compiler.parameters>true</maven.compiler.parameters>
     </properties>
 
+    <dependencies>
+        <!-- Spring Boot Starter Web (SSE, REST 컨트롤러용) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 </project>
